--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                     <div class="led" style="bottom: 15px; right: 15px;"></div>
                 </div>
                 <div class="device device-3">
-                    <img src="C:\Users\kadul\Desktop\website\ARDUINO UNO.jpeg" alt="Arduino uno" class="device-img">
+                    <img src="ARDUINO UNO.jpeg" alt="Arduino uno" class="device-img">
                     <div class="led" style="top: 10px; left: 10px;"></div>
                 </div>
             </div>
