--- a/index.html
+++ b/index.html
@@ -603,11 +603,11 @@
         <div class="hero-image">
             <div class="device-showcase">
                 <div class="device device-1">
-                    <img src="C:\Users\kadul\Desktop\website\ESP32.jpeg" alt="ESP32" class="device-img">
+                    <img src="ESP32.jpeg" alt="ESP32" class="device-img">
                     <div class="led" style="top: 10px; right: 10px;"></div>
                 </div>
                 <div class="device device-2">
-                    <img src="C:\Users\kadul\Desktop\website\Raspberry pi.jpg" alt="Raspberry Pi" class="device-img">
+                    <img src="Raspberry pi.jpg" alt="Raspberry Pi" class="device-img">
                     <div class="led" style="top: 15px; left: 15px;"></div>
                     <div class="led" style="bottom: 15px; right: 15px;"></div>
                 </div>
@@ -663,7 +663,7 @@
         <h2 class="section-title">Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <img src="C:\Users\kadul\Desktop\website\ESP-NOW Project.jpg" alt="ESP-NOW Project" class="project-img">
+                <img src="ESP-NOW Project.jpg" alt="ESP-NOW Project" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">ESP-NOW Wireless Communication Protocol</h3>
                     <p class="project-desc">Developed a robust wireless communication system using ESP-NOW protocol with ESP32 microcontrollers, enabling low-latency data transfer for IoT applications.</p>
@@ -680,7 +680,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="C:\Users\kadul\Desktop\website\Password Generator.jpg" alt="Password Generator" class="project-img">
+                <img src="Password Generator.jpg" alt="Password Generator" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Secure Password Generator using Cybersecurity</h3>
                     <p class="project-desc">Created a secure password generation tool implementing modern cryptographic principles and entropy sources to generate highly secure, randomized passwords.</p>
@@ -696,7 +696,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="C:\Users\kadul\Desktop\website\AI Image Classification.jpg" alt="AI Image Classification" class="project-img">
+                <img src="AI Image Classification.jpg" alt="AI Image Classification" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">AI Image Classification System</h3>
                     <p class="project-desc">Developed an image classification model using YOLOv8 and CNNs for object detection and image analysis, part of my AI internship experience.</p>
@@ -713,7 +713,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="C:\Users\kadul\Desktop\website\Arduino Bluetooth Controlled Car.png" alt="Bluetooth Controlled Car" class="project-img">
+                <img src="Arduino Bluetooth Controlled Car.png" alt="Bluetooth Controlled Car" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Arduino Bluetooth Controlled Car</h3>
                     <p class="project-desc">The Arduino Bluetooth Controlled Car is a wireless robot operated via a smartphone using a Bluetooth module and Arduino. It controls DC motors via an L298N motor driver, allowing movement in all directions.</p>
@@ -725,7 +725,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/Abhayreddykaduluri/arduino-bluetooth-controlled-car-code" class="project-link"><i class="fas fa-code"></i> View Code</a>
-                        <a href="#" class="project-link"><i class="fas fa-link"></i> Details</a>
+                        <a href="Arduino Bluetooth Controlled Car.pdf" class="project-link"><i class="fas fa-link"></i> Details</a>
                     </div>
                 </div>
             </div>
