--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/Abhayreddykaduluri/arduino-bluetooth-controlled-car-code" class="project-link"><i class="fas fa-code"></i> View Code</a>
-                        <a href="Arduino Bluetooth Controlled Car.pdf" class="project-link"><i class="fas fa-link"></i> Details</a>
+                        <a href="#" class="project-link"><i class="fas fa-link"></i> Details</a>
                     </div>
                 </div>
             </div>
@@ -735,7 +735,7 @@
         <h2 class="section-title">Resume</h2>
         <div style="text-align: center; margin-bottom: 2rem;">
             <p style="max-width: 600px; margin: 0 auto; margin-bottom: 2rem;">My academic journey and professional experiences have equipped me with a diverse skill set in electronics, communication systems, and software development.</p>
-            <a href="Abhay (Resume).pdf" class="cta-btn" style="margin-right: 0;"><i class="fas fa-download"></i> Download Resume</a>
+            <a href="#" class="cta-btn" style="margin-right: 0;"><i class="fas fa-download"></i> Download Resume</a>
         </div>
         <div style="background: #1a1a1a; border-radius: 10px; padding: 2rem; max-width: 800px; margin: 0 auto;">
             <div style="margin-bottom: 2rem; border-bottom: 1px solid #333; padding-bottom: 1.5rem;">
