--- a/index.html
+++ b/index.html
@@ -845,8 +845,6 @@
                     <div class="skill-badge">IoT Development</div>
                     <div class="skill-badge">Embedded Systems</div>
                     <div class="skill-badge">Robotics</div>
-                    <div class="skill-badge">Circuit Design</div>
-                    <div class="skill-badge">PCB Layout</div>
                 </div>
             </div>
             <div class="education">
@@ -926,12 +924,11 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="Arduino Bluetooth Controlled Car.png" alt="Bluetooth Controlled Car" class="project-img">
+                <img src="AI Image Classification.jpg" alt="Bluetooth Controlled Car" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Arduino Bluetooth Controlled Car</h3>
                     <p class="project-desc">The Arduino Bluetooth Controlled Car is a wireless robot operated via a smartphone using a Bluetooth module and Arduino. It controls DC motors via an L298N motor driver, allowing movement in all directions.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">Arduino UNO</span>
                         <span class="tech-tag">Arduino IDE</span>
                         <span class="tech-tag">Arduino-based C++</span>
                         <span class="tech-tag">IoT</span>
