--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="AI Image Classification.jpg" alt="Bluetooth Controlled Car" class="project-img">
+                <img src="Arduino Bluetooth Controlled Car.png" alt="Bluetooth Controlled Car" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Arduino Bluetooth Controlled Car</h3>
                     <p class="project-desc">The Arduino Bluetooth Controlled Car is a wireless robot operated via a smartphone using a Bluetooth module and Arduino. It controls DC motors via an L298N motor driver, allowing movement in all directions.</p>
