--- a/index.html
+++ b/index.html
@@ -836,6 +836,19 @@
             <div class="about-text">
                 <p>I am an enthusiastic Electronics and Communication Engineering student at SRKR Engineering College with a passion for innovation in IoT, AI, and cybersecurity. I thrive on solving real-world problems, whether it's developing efficient wireless communication systems using ESP32 boards or exploring the latest advancements in artificial intelligence and network security.</p>
                 <p>My technical journey has taken me through various domains of electronics, from embedded systems to circuit design, and I'm constantly learning and adapting to new technologies in this rapidly evolving field.</p>
+            <div class="skills">
+                    <div class="skill-badge">C Programming</div>
+                    <div class="skill-badge">Python</div>
+                    <div class="skill-badge">C#</div>
+                    <div class="skill-badge">Arduino IDE</div>
+                    <div class="skill-badge">ESP32 Programming</div>
+                    <div class="skill-badge">IoT Development</div>
+                    <div class="skill-badge">Embedded Systems</div>
+                    <div class="skill-badge">Robotics</div>
+                    <div class="skill-badge">Circuit Design</div>
+                    <div class="skill-badge">PCB Layout</div>
+                </div>
+            </div>
             <div class="education">
                 <h3 style="margin-bottom: 1.5rem; color: var(--secondary);">Education</h3>
                 <div style="background: #2a2a2a; padding: 1.5rem; border-radius: 10px; margin-bottom: 1.5rem;">
