--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
             <div class="project-card">
                 <img src="AI Image Classification.jpg" alt="AI Image Classification" class="project-img">
                 <div class="project-content">
-                    <h3 class="project-title">AI Image Classification System</h3>
+                    <h3 class="project-title">Object detection using Yolo v8</h3>
                     <p class="project-desc">Developed an image classification model using YOLOv8 and CNNs for object detection and image analysis, part of my AI internship experience.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
@@ -954,8 +954,7 @@
                         <span class="tech-tag">AI</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fas fa-code"></i> View Code</a>
-                        <a href="#" class="project-link"><i class="fas fa-link"></i> Details</a>
+                        <a href="https://www.linkedin.com/posts/abhay-reddy-kaduluri-304b9a1b6_aimers-aimersociety-apsche-activity-7214517638599737345-w85s?utm_source=share&utm_medium=member_desktop&rcm=ACoAADJdgjQBu08LPs276jA9c_U2xn-O30U4Kqc" class="project-link"><i class="fas fa-link"></i> Details</a>
                     </div>
                 </div>
             </div>
@@ -1005,7 +1004,7 @@
                 <p class="project-desc" style="color: #ccc;">ESP32 is a powerful Wi-Fi and Bluetooth-enabled microcontroller with dual-core processing, ideal for IoT and embedded applications.</p>
             </div>
             <div class="project-links">
-                <a href="https://drive.google.com/file/d/1Lgp5CUAyoMLw9MOkaNUWg92bU2MHfop9/view?usp=sharing" 
+                <a href="https://drive.google.com/file/d/1eW-zfBJ8i5HxFC5tWJRYCDB3xxDHk-Gy/view?usp=sharing" 
                    class="project-link" style="color: cyan; text-decoration: none; font-weight: bold;">
                    <i class="fas fa-link"></i> Details
                 </a>
@@ -1020,7 +1019,7 @@
                 <p class="project-desc" style="color: #ccc;">Arduino Uno is an easy-to-use microcontroller board based on the ATmega328P, featuring 14 digital I/O pins, 6 analog inputs, and USB programming support, making it ideal for beginners and prototyping.</p>
             </div>
             <div class="project-links">
-                <a href="https://drive.google.com/file/d/1s9QdtbHu5wncLYlnoLXmOp-4dlLDYnWP/view?usp=sharing" 
+                <a href="https://drive.google.com/file/d/1KLdHQe-4-K4z1gMm1YHyklESIwjdAnOL/view?usp=sharing" 
                    class="project-link" style="color: cyan; text-decoration: none; font-weight: bold;">
                    <i class="fas fa-link"></i> Details
                 </a>
