--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Electronics & <span>Communication</span> Engineering Student</h1>
-            <p>Passionate about innovation in IoT, AI, cybersecurity, and embedded systems. Building tomorrow's technology, one circuit at a time.</p>
+            <p>Passionate on IoT, embedded systems and VLSI Design. Eager to Apply Skills in Emerging Technologies and Semiconductor Innovations.</p>
             <div>
                 <a href="#projects" class="cta-btn">View Projects</a>
                 <a href="#contact" class="cta-btn" style="background: transparent; border: 2px solid var(--secondary);">Contact Me</a>
@@ -876,7 +876,6 @@
                     <div class="skill-badge">C Programming</div>
                     <div class="skill-badge">Python</div>
                     <div class="skill-badge">C#</div>
-                    <div class="skill-badge">Arduino IDE</div>
                     <div class="skill-badge">ESP32 Programming</div>
                     <div class="skill-badge">IoT Development</div>
                     <div class="skill-badge">Embedded Systems</div>
@@ -974,9 +973,38 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="Talking Robot.webp" alt="Talking Robot" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">Talking Robot</h3>
+                    <p class="project-desc">The robot listens to your voice, converts it into text, and then speaks it back using text-to-speech. It can also recognize the command "exit" to stop the conversation. </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">pyttsx3</span>
+                        <span class="tech-tag">speechrecognition</span>
+                        <span class="tech-tag">google_generativeai</span>
+                    </div>
+                        <a href="https://github.com/Abhayreddykaduluri/Talking-Robot" class="project-link"><i class="fas fa-code"></i> View Code</a>
+                        <a href="https://www.linkedin.com/posts/abhay-reddy-kaduluri-304b9a1b6_aimers-aimersociety-apsche-activity-7217401895521292289-M6Aj?utm_source=share&utm_medium=member_desktop&rcm=ACoAADJdgjQBu08LPs276jA9c_U2xn-O30U4Kqc" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            <div class="project-card">
+                <img src="Object Tracking.webp" alt="Object Tracking" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">Object Tracking</h3>
+                    <p class="project-desc">OpenCV provides powerful object tracking algorithms like MOSSE, KCF, and CSRT to track moving objects in real-time. It uses computer vision techniques to detect and follow objects across video frames efficiently. </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Computer Vision</span>
+                        <span class="tech-tag">Image Processing</span>
+                        <span class="tech-tag">Motion Detection</span>
+                    </div>
+                        <a href="https://github.com/Abhayreddykaduluri/OpenCV---Tracking-Objects" class="project-link"><i class="fas fa-code"></i> View Code</a>
+                        <a href="https://www.linkedin.com/posts/abhay-reddy-kaduluri-304b9a1b6_aimers-aimersociety-apsche-activity-7216301777640452096-dVV3?utm_source=share&utm_medium=member_desktop&rcm=ACoAADJdgjQBu08LPs276jA9c_U2xn-O30U4Kqc" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div>      
     </section>
     <section id="boards" class="section" style="background-color: #151515;">
-        <h2 class="section-title">Embedded Systems & IoT Development Boards</h2>
+        <h2 class="section-title">Development Boards & Microcontrollers</h2>
         <div class="boards-container">
     
     <div class="card-container" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
@@ -1025,6 +1053,34 @@
                 </a>
             </div>
         </div>
+        <!-- BeagleBone Black -->
+        <div class="project-card" style="background: #222; padding: 15px; border-radius: 10px; width: 300px; text-align: center;">
+            <img src="BeagleBone Black.webp" alt="BeagleBone Black" class="project-img" style="width: 100%; border-radius: 10px;">
+            <div class="project-content">
+                <h3 class="project-title" style="color: white;">BeagleBone Black</h3>
+                <p class="project-desc" style="color: #ccc;">BeagleBone Black (BBB) is a powerful single-board computer (SBC) designed for embedded systems, industrial applications, and IoT projects. It is similar to the Raspberry Pi but features more GPIOs, better real-time processing, and onboard eMMC storage.</p>
+            </div>
+            <div class="project-links">
+                <a href="https://drive.google.com/file/d/1ynDFbs0_d1h7EJPt5fUOzWx7pELeW6wk/view?usp=sharing" 
+                   class="project-link" style="color: cyan; text-decoration: none; font-weight: bold;">
+                   <i class="fas fa-link"></i> Details
+                </a>
+            </div>
+        </div>
+        <!-- Teensy -->
+        <div class="project-card" style="background: #222; padding: 15px; border-radius: 10px; width: 300px; text-align: center;">
+            <img src="Teensy.jpg" alt="Teensy" class="project-img" style="width: 100%; border-radius: 10px;">
+            <div class="project-content">
+                <h3 class="project-title" style="color: white;">Teensy</h3>
+                <p class="project-desc" style="color: #ccc;">Teensy is a family of high-performance microcontroller boards developed by PJRC. It is widely used in IoT, robotics, audio processing, real-time applications, and high-speed projects.</p>
+            </div>
+            <div class="project-links">
+                <a href="https://drive.google.com/file/d/1kcRrEnJDQiuh4NrOJRYq_ldUuIF_xSM_/view?usp=sharing" 
+                   class="project-link" style="color: cyan; text-decoration: none; font-weight: bold;">
+                   <i class="fas fa-link"></i> Details
+                </a>
+            </div>
+        </div>
 </section>
 
 
@@ -1055,7 +1111,6 @@
                     <div class="skill-badge">C Programming</div>
                     <div class="skill-badge">Python</div>
                     <div class="skill-badge">C#</div>
-                    <div class="skill-badge">Arduino IDE</div>
                     <div class="skill-badge">ESP32 Programming</div>
                     <div class="skill-badge">IoT Development</div>
                     <div class="skill-badge">Embedded Systems</div>
