--- a/index.html
+++ b/index.html
@@ -983,10 +983,12 @@
                         <span class="tech-tag">speechrecognition</span>
                         <span class="tech-tag">google_generativeai</span>
                     </div>
+                    <div class="project-links">
                         <a href="https://github.com/Abhayreddykaduluri/Talking-Robot" class="project-link"><i class="fas fa-code"></i> View Code</a>
                         <a href="https://www.linkedin.com/posts/abhay-reddy-kaduluri-304b9a1b6_aimers-aimersociety-apsche-activity-7217401895521292289-M6Aj?utm_source=share&utm_medium=member_desktop&rcm=ACoAADJdgjQBu08LPs276jA9c_U2xn-O30U4Kqc" class="project-link"><i class="fas fa-link"></i> Details</a>
                     </div>
                 </div>
+            </div>
             <div class="project-card">
                 <img src="Object Tracking.webp" alt="Object Tracking" class="project-img">
                 <div class="project-content">
@@ -997,6 +999,7 @@
                         <span class="tech-tag">Image Processing</span>
                         <span class="tech-tag">Motion Detection</span>
                     </div>
+                    <div class="project-links">
                         <a href="https://github.com/Abhayreddykaduluri/OpenCV---Tracking-Objects" class="project-link"><i class="fas fa-code"></i> View Code</a>
                         <a href="https://www.linkedin.com/posts/abhay-reddy-kaduluri-304b9a1b6_aimers-aimersociety-apsche-activity-7216301777640452096-dVV3?utm_source=share&utm_medium=member_desktop&rcm=ACoAADJdgjQBu08LPs276jA9c_U2xn-O30U4Kqc" class="project-link"><i class="fas fa-link"></i> Details</a>
                     </div>
