--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
     </section>
 
     <section id="projects" class="section" style="background-color: #151515;">
-        <h2 class="section-title">Projects</h2>
+        <h2 class="section-title">My Projects</h2>
         <div class="project-container">
             <div class="project-card">
                 <img src="ESP-NOW Project.jpg" alt="ESP-NOW Project" class="project-img">
