--- a/index.html
+++ b/index.html
@@ -795,6 +795,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#boards">Boards</a></li>
+        <li><a href="#modules">Modules</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -811,6 +812,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#boards">Boards</a></li>
+        <li><a href="#modules">Modules</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -878,8 +880,6 @@
                     <div class="skill-badge">C#</div>
                     <div class="skill-badge">ESP32 Programming</div>
                     <div class="skill-badge">IoT Development</div>
-                    <div class="skill-badge">Embedded Systems</div>
-                    <div class="skill-badge">Robotics</div>
                 </div>
             </div>
             <div class="education">
@@ -1072,21 +1072,74 @@
         </div>
         <!-- Teensy -->
         <div class="project-card" style="background: #222; padding: 15px; border-radius: 10px; width: 300px; text-align: center;">
-            <img src="Teensy.jpg" alt="Teensy" class="project-img" style="width: 100%; border-radius: 10px;">
-            <div class="project-content">
-                <h3 class="project-title" style="color: white;">Teensy</h3>
-                <p class="project-desc" style="color: #ccc;">Teensy is a family of high-performance microcontroller boards developed by PJRC. It is widely used in IoT, robotics, audio processing, real-time applications, and high-speed projects.</p>
+            <img src="Teensy.jpg" alt="Teensy" class="boards-img" style="width: 100%; border-radius: 10px;">
+            <div class="boards-content">
+                <h3 class="boards-title" style="color: white;">Teensy</h3>
+                <p class="boards-desc" style="color: #ccc;">Teensy is a family of high-performance microcontroller boards developed by PJRC. It is widely used in IoT, robotics, audio processing, real-time applications, and high-speed projects.</p>
             </div>
-            <div class="project-links">
+            <div class="boards-links">
                 <a href="https://drive.google.com/file/d/1kcRrEnJDQiuh4NrOJRYq_ldUuIF_xSM_/view?usp=sharing" 
-                   class="project-link" style="color: cyan; text-decoration: none; font-weight: bold;">
+                   class="boards-link" style="color: cyan; text-decoration: none; font-weight: bold;">
                    <i class="fas fa-link"></i> Details
                 </a>
             </div>
         </div>
 </section>
 
-
+<section id="modules" class="section" style="background-color: #151515;">
+        <h2 class="section-title">Modules & Sensors</h2>
+        <div class="project-container">
+            <div class="project-card">
+                <img src="ultrasonic-sensor.png" alt="ultrasonic sensor" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">Ultrasonic Sensor (HC-SR04) </h3>
+                    <p class="project-desc">The HC-SR04 Ultrasonic Sensor is a popular distance measurement sensor that uses sound waves to determine the distance between the sensor and an object. It is widely used in robotics, obstacle detection, and IoT applications.</p>
+                    <div class="project-links">
+                        <a href="https://drive.google.com/file/d/1GDJ5MqDATpDG74X82GQ271AdJ8qNaO1C/view?usp=sharing" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="dht11-dht22.jpg" alt="DHT11 / DHT22 Sensor" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">DHT11 / DHT22 Sensor </h3>
+                    <p class="project-desc">The DHT11 and DHT22 are widely used temperature and humidity sensors that provide digital output via a single data pin. They are inexpensive, easy to use, and commonly used in weather monitoring and home automation projects. </p>
+                    <div class="project-links">
+                        <a href="https://drive.google.com/file/d/1e6KplbiFmT3X0MhvKzZYQqhYji_Uirej/view?usp=drive_link" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="PIR-SENSOR.jpg" alt="PIR SENSOR" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">PIR-SENSOR</h3>
+                    <p class="project-desc">A PIR (Passive Infrared) sensor is a motion detection sensor that detects movement by measuring infrared (IR) radiation changes in its field of view. It is widely used in security systems, automatic lighting, and IoT-based automation projects. </p>
+                    <div class="project-links">
+                        <a href="https://drive.google.com/file/d/1fP-lS9F7OZnfQPNRUK2Nxhf3Ax0QAUmz/view?usp=drive_link" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="BME280 ,BMP180.jpg" alt="BME280 / BMP180 " class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">BME280 / BMP180 </h3>
+                    <p class="project-desc">The BME280 and BMP180 are highly accurate sensors used for measuring barometric pressure, temperature, and altitude. The BME280 also includes humidity sensing, making it more advanced than the BMP180. These sensors are widely used in weather monitoring, altimeters, IoT projects, and drones. </p>
+                    <div class="project-links">
+                        <a href="https://drive.google.com/file/d/1GM8K4AX5ZkF4Y3lx0FRf6VL2CJ4e93as/view?usp=sharing" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div> 
+            <div class="project-card">
+                <img src="oled.jpg" alt="OLED" class="project-img">
+                <div class="project-content">
+                    <h3 class="project-title">OLED</h3>
+                    <p class="project-desc">An OLED (Organic Light Emitting Diode) display is a compact, low-power screen used in electronics, IoT, and embedded systems. Unlike LCDs, OLEDs do not require a backlight because each pixel emits its own light, resulting in higher contrast, better visibility, and lower power consumption. </p>
+                    <div class="project-links">
+                        <a href="https://drive.google.com/file/d/1MgTzWgx3iTJChwzx8b0BSXhFC7lWPpGG/view?usp=sharing" class="project-link"><i class="fas fa-link"></i> Details</a>
+                    </div>
+                </div>
+            </div>
+</section>
 
 
 
