--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
                         </div>
                         <div>
                             <p style="font-weight: 500;">Phone</p>
-                            <p style="color: #aaa;">+91 8500274802</p>
+                            <p style="color: #aaa;"></p>
                         </div>
                     </div>
                     <div style="display: flex; align-items: center; gap: 1.5rem; margin-bottom: 1.5rem;">
