--- a/index.html
+++ b/index.html
@@ -957,7 +957,6 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -973,7 +972,6 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -1037,7 +1035,7 @@
         <div class="hero-image">
             <div class="device-showcase">
                 <div class="device device-1">
-                    <img src="ESP32.jpg" alt="ESP32" class="device-img">
+                    <img src="ESP32.jpeg" alt="ESP32" class="device-img">
                     <div class="led" style="top: 10px; right: 10px;"></div>
                 </div>
                 <div class="device device-2">
